--- a/doc/handout.tex
+++ b/doc/handout.tex
@@ -1,4 +1,4 @@
-% Created 2022-02-04 Fri 20:39
+% Created 2022-02-04 Fri 20:45
 % Intended LaTeX compiler: pdflatex
 \documentclass[compress,dvipdfmx,11pt]{beamer}
 \usepackage[utf8]{inputenc}
@@ -41,8 +41,8 @@
 \newcommand{\Imat}{\mathbf I}
 
 \section{概要}
-\label{sec:orgd6258a1}
-\begin{frame}[label={sec:orge39e6a9}]{Python とは？}
+\label{sec:org126a311}
+\begin{frame}[label={sec:org5f1afc2}]{Python とは？}
 Python(パイソン)はオブジェクト指向のプログラミング言語であり、手軽に始
 める事ができ実用的な本格的なプログラムの開発を行う事が可能
 
@@ -58,8 +58,8 @@ Python(パイソン)はオブジェクト指向のプログラミング言語で
 \end{frame}
 
 \section{Python 環境作成}
-\label{sec:orgc70a84c}
-\begin{frame}[label={sec:orgfb28f47},fragile]{Python 導入：apt install を使う(Debian)}
+\label{sec:orgf675c42}
+\begin{frame}[label={sec:org06c6e19},fragile]{Python 導入：apt install を使う(Debian)}
  メリット
 \begin{itemize}
 \item インストールが簡単
@@ -85,7 +85,7 @@ cat /etc/os-release or cat /etc/debian_version
 \end{verbatim}
 \end{frame}
 
-\begin{frame}[label={sec:orgbff4f23},fragile]{Python 導入：source からビルド}
+\begin{frame}[label={sec:org77a260f},fragile]{Python 導入：source からビルド}
  メリット
 \begin{itemize}
 \item 最新バージョンが手に入る
@@ -108,8 +108,8 @@ sudo make altinstall
 
 
 \section{pman command}
-\label{sec:orgd60c2b1}
-\begin{frame}[label={sec:org5201310}]{pman コマンド}
+\label{sec:orgd5ccf2e}
+\begin{frame}[label={sec:org8e57423}]{pman コマンド}
 発想
 \begin{itemize}
 \item Debian なら man コマンドがあるが、同じ事を Python でも行いたい
@@ -125,8 +125,8 @@ sudo make altinstall
 
 
 \section{実践(ハンズオン)}
-\label{sec:orgf9fa3e2}
-\begin{frame}[label={sec:org7be16f3},fragile]{実践：必要なモジュール}
+\label{sec:orgd473608}
+\begin{frame}[label={sec:org397da90},fragile]{実践：必要なモジュール}
  \begin{itemize}
 \item beautifulsoup4
 \begin{itemize}
@@ -149,11 +149,21 @@ pip install -r ../requirements.txt
 \end{verbatim}
 \end{frame}
 
-\begin{frame}[label={sec:org5f9981d}]{実践：プログラム作成}
+\begin{frame}[label={sec:org6921526}]{実践：プログラム作成}
+HTML 取得
+\begin{itemize}
+\item urllib.request.urlopen()
+\end{itemize}
+
+
+HTML 解析
+\begin{itemize}
+\item BeautifulSoup
+\end{itemize}
 \end{frame}
 
 \section{最後に}
-\label{sec:org4ea0c13}
-\begin{frame}[label={sec:orge41d0f7}]{最後に}
+\label{sec:org573ad9b}
+\begin{frame}[label={sec:org367f660}]{最後に}
 \end{frame}
 \end{document}
