--- a/doc/handout.tex
+++ b/doc/handout.tex
@@ -1,4 +1,4 @@
-% Created 2022-02-05 Sat 01:49
+% Created 2022-02-05 Sat 02:20
 % Intended LaTeX compiler: pdflatex
 \documentclass[compress,dvipdfmx,11pt]{beamer}
 \usepackage[utf8]{inputenc}
@@ -41,8 +41,8 @@
 \newcommand{\Imat}{\mathbf I}
 
 \section{概要}
-\label{sec:org0115d54}
-\begin{frame}[label={sec:org1a3b01d}]{Python とは？}
+\label{sec:org349cfae}
+\begin{frame}[label={sec:org9a827b5}]{Python とは？}
 Python(パイソン)はオブジェクト指向のプログラミング言語であり、手軽に始
 める事ができ実用的な本格的なプログラムの開発を行う事が可能
 
@@ -54,12 +54,13 @@ Python(パイソン)はオブジェクト指向のプログラミング言語で
 最新の安定バージョン：3.10.2
 
 
-本日のソース一式：\url{https://github.com/taiseiyo/pman/tree/debian}
+本日のソース一式
+→ git clone \url{https://github.com/taiseiyo/pman/tree/debian}
 \end{frame}
 
 \section{Python 環境作成}
-\label{sec:orge3375e4}
-\begin{frame}[label={sec:orgacfc42c},fragile]{Python 導入：apt install を使う(Debian)}
+\label{sec:org9eecb33}
+\begin{frame}[label={sec:org1da7f8c},fragile]{Python 導入：apt install を使う(Debian)}
  メリット
 \begin{itemize}
 \item インストールが簡単
@@ -85,7 +86,7 @@ cat /etc/os-release or cat /etc/debian_version
 \end{verbatim}
 \end{frame}
 
-\begin{frame}[label={sec:org550a6a4},fragile]{Python 導入：source からビルド}
+\begin{frame}[label={sec:orgce78655},fragile]{Python 導入：source からビルド}
  メリット
 \begin{itemize}
 \item 最新バージョンが手に入る
@@ -108,8 +109,8 @@ sudo make altinstall
 
 
 \section{pman command}
-\label{sec:org5d7e30e}
-\begin{frame}[label={sec:org44b4ee8}]{pman コマンド}
+\label{sec:orgd56a749}
+\begin{frame}[label={sec:org14457dd}]{pman コマンド}
 発想
 \begin{itemize}
 \item Debian なら man コマンドがあるが、同じ事を Python でも行いたい
@@ -125,8 +126,8 @@ sudo make altinstall
 
 
 \section{実践(ハンズオン)}
-\label{sec:org50fab67}
-\begin{frame}[label={sec:orgfd49007},fragile]{実践：必要なモジュール}
+\label{sec:orgb10f7d9}
+\begin{frame}[label={sec:org2a7e2f6},fragile]{実践：必要なモジュール}
  \begin{itemize}
 \item beautifulsoup4
 \begin{itemize}
@@ -149,7 +150,7 @@ pip install -r ../requirements.txt
 \end{verbatim}
 \end{frame}
 
-\begin{frame}[label={sec:org51e4067}]{実践：プログラム作成}
+\begin{frame}[label={sec:orgdf18289}]{実践：プログラム作成}
 HTML 取得
 \begin{itemize}
 \item urllib.request.urlopen()
@@ -163,7 +164,8 @@ HTML 解析
 \end{frame}
 
 \section{最後に}
-\label{sec:org2fe6fec}
-\begin{frame}[label={sec:orga34e136}]{最後に}
+\label{sec:org1093c30}
+\begin{frame}[label={sec:org3a72277}]{最後に}
+GitHub: 
 \end{frame}
 \end{document}
