--- a/doc/handout.org
+++ b/doc/handout.org
@@ -36,7 +36,8 @@ https://www.tiobe.com/tiobe-index/
 最新の安定バージョン：3.10.2
 
 
-本日のソース一式：https://github.com/taiseiyo/pman/tree/debian
+本日のソース一式
+→ git clone https://github.com/taiseiyo/pman/tree/debian
 
 * Python 環境作成
 ** Python 導入：apt install を使う(Debian)
@@ -106,10 +107,12 @@ pman 作成の環境構築($/pman/prog/$ の想定)
 ** 実践：プログラム作成
 HTML 取得
   - urllib.request.urlopen()
-
+  
 
 HTML 解析
   - BeautifulSoup()
 
 * 最後に
 ** 最後に
+
+GitHub: 
