--- a/doc/handout.tex
+++ b/doc/handout.tex
@@ -1,4 +1,4 @@
-% Created 2022-02-05 Sat 02:20
+% Created 2022-02-05 Sat 02:22
 % Intended LaTeX compiler: pdflatex
 \documentclass[compress,dvipdfmx,11pt]{beamer}
 \usepackage[utf8]{inputenc}
@@ -41,8 +41,8 @@
 \newcommand{\Imat}{\mathbf I}
 
 \section{概要}
-\label{sec:org349cfae}
-\begin{frame}[label={sec:org9a827b5}]{Python とは？}
+\label{sec:orgdcbd10e}
+\begin{frame}[label={sec:org74ffd46}]{Python とは？}
 Python(パイソン)はオブジェクト指向のプログラミング言語であり、手軽に始
 める事ができ実用的な本格的なプログラムの開発を行う事が可能
 
@@ -59,8 +59,8 @@ Python(パイソン)はオブジェクト指向のプログラミング言語で
 \end{frame}
 
 \section{Python 環境作成}
-\label{sec:org9eecb33}
-\begin{frame}[label={sec:org1da7f8c},fragile]{Python 導入：apt install を使う(Debian)}
+\label{sec:org9684f83}
+\begin{frame}[label={sec:orgcdf5714},fragile]{Python 導入：apt install を使う(Debian)}
  メリット
 \begin{itemize}
 \item インストールが簡単
@@ -86,7 +86,7 @@ cat /etc/os-release or cat /etc/debian_version
 \end{verbatim}
 \end{frame}
 
-\begin{frame}[label={sec:orgce78655},fragile]{Python 導入：source からビルド}
+\begin{frame}[label={sec:orgff13449},fragile]{Python 導入：source からビルド}
  メリット
 \begin{itemize}
 \item 最新バージョンが手に入る
@@ -109,8 +109,8 @@ sudo make altinstall
 
 
 \section{pman command}
-\label{sec:orgd56a749}
-\begin{frame}[label={sec:org14457dd}]{pman コマンド}
+\label{sec:orgca64a49}
+\begin{frame}[label={sec:org7af76c9}]{pman コマンド}
 発想
 \begin{itemize}
 \item Debian なら man コマンドがあるが、同じ事を Python でも行いたい
@@ -126,8 +126,8 @@ sudo make altinstall
 
 
 \section{実践(ハンズオン)}
-\label{sec:orgb10f7d9}
-\begin{frame}[label={sec:org2a7e2f6},fragile]{実践：必要なモジュール}
+\label{sec:org7bab952}
+\begin{frame}[label={sec:org00eee34},fragile]{実践：必要なモジュール}
  \begin{itemize}
 \item beautifulsoup4
 \begin{itemize}
@@ -150,7 +150,7 @@ pip install -r ../requirements.txt
 \end{verbatim}
 \end{frame}
 
-\begin{frame}[label={sec:orgdf18289}]{実践：プログラム作成}
+\begin{frame}[label={sec:orgf685346}]{実践：プログラム作成}
 HTML 取得
 \begin{itemize}
 \item urllib.request.urlopen()
@@ -164,8 +164,8 @@ HTML 解析
 \end{frame}
 
 \section{最後に}
-\label{sec:org1093c30}
-\begin{frame}[label={sec:org3a72277}]{最後に}
+\label{sec:orged916b6}
+\begin{frame}[label={sec:org34fb2c0}]{最後に}
 GitHub: 
 \end{frame}
 \end{document}
