--- a/doc/handout.tex
+++ b/doc/handout.tex
@@ -1,4 +1,4 @@
-% Created 2022-02-06 Sun 09:35
+% Created 2022-02-06 Sun 17:14
 % Intended LaTeX compiler: pdflatex
 \documentclass[compress,dvipdfmx,11pt]{beamer}
 \usepackage[utf8]{inputenc}
@@ -40,8 +40,8 @@
 \newcommand{\Imat}{\mathbf I}
 
 \section{概要}
-\label{sec:org126cd04}
-\begin{frame}[label={sec:orgbdf2805},fragile]{Python とは？}
+\label{sec:org37babc2}
+\begin{frame}[label={sec:org5c10f1e},fragile]{Python とは？}
  Python(パイソン)はオブジェクト指向のプログラミング言語であり、 \alert{手軽に
 始める事ができ実用的な本格的なプログラムの開発を行う事が可能}
 
@@ -62,8 +62,8 @@ git clone https://github.com/taiseiyo/pman.git
 \end{frame}
 
 \section{Python 環境作成}
-\label{sec:org421b938}
-\begin{frame}[label={sec:orga69ff9c},fragile]{Python 導入：apt install を使う(Debian)}
+\label{sec:orgc3d6628}
+\begin{frame}[label={sec:org52d2fcd},fragile]{Python 導入：apt install を使う(Debian)}
  メリット
 \begin{itemize}
 \item インストールが簡単
@@ -89,7 +89,7 @@ cat /etc/os-release or cat /etc/debian_version
 \end{verbatim}
 \end{frame}
 
-\begin{frame}[label={sec:orgf651b80},fragile]{Python 導入：source からビルド}
+\begin{frame}[label={sec:orge063980},fragile]{Python 導入：source からビルド}
  メリット
 \begin{itemize}
 \item 最新バージョンが手に入る
@@ -115,8 +115,8 @@ sudo make # ディレクトリの python が使用可能になる
 
 
 \section{pman command}
-\label{sec:org3c093c4}
-\begin{frame}[label={sec:org217790f}]{pman コマンド}
+\label{sec:org0a69fd0}
+\begin{frame}[label={sec:orgb34639e}]{pman コマンド}
 発想
 \begin{itemize}
 \item Debian なら man コマンドがあるが、同じ事を Python でも行いたい
@@ -132,8 +132,8 @@ sudo make # ディレクトリの python が使用可能になる
 
 
 \section{実践(ハンズオン)}
-\label{sec:org9a061c2}
-\begin{frame}[label={sec:org50b368f},fragile]{実践：必要なモジュール}
+\label{sec:org72e1aae}
+\begin{frame}[label={sec:org6c5c650},fragile]{実践：必要なモジュール}
  \begin{itemize}
 \item beautifulsoup4
 \begin{itemize}
@@ -157,7 +157,7 @@ pip install -r ../requirements.txt
 \end{verbatim}
 \end{frame}
 
-\begin{frame}[label={sec:org62f8f3b}]{実践：プログラム作成}
+\begin{frame}[label={sec:org4f5dc3b}]{実践：プログラム作成}
 HTML 取得
 \begin{itemize}
 \item urllib.request.urlopen(url)
@@ -178,12 +178,20 @@ HTML 解析
 \end{itemize}
 \end{frame}
 
-\begin{frame}[label={sec:org1f90f1d}]{オマケ}
+\begin{frame}[label={sec:org65c83eb}]{オマケ}
 emacs との組み合わせ
 \begin{itemize}
 \item emacs と組み合わせる事でエディタ上で Python Manual を見る事ができる
 \begin{itemize}
 \item ソースコード: \url{./prog/pman.el}
+\end{itemize}
+\end{itemize}
+
+モジュールの検索を簡単にする
+\begin{itemize}
+\item fzf を扱って簡単にモジュールを見つけやすくする
+\begin{itemize}
+\item ソースコード: \url{./prog/pman\_fzf.py}
 \end{itemize}
 \end{itemize}
 
@@ -198,9 +206,10 @@ Script(bash)を書いて結果を見やすく
 \end{frame}
 
 
+
 \section{最後に}
-\label{sec:orgd314976}
-\begin{frame}[label={sec:org623e608}]{最後に}
+\label{sec:orgfc63a36}
+\begin{frame}[label={sec:orgd0dfc9c}]{最後に}
 ホームページ: \url{https://taiseiyo.com}
 
 
